docker/03-avanzado/02-kubernetes-basics/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-app-svc
spec:
  selector:
    app: mi-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mi-app-lb
spec:
  selector:
    app: mi-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
